(#23) Cleaned up parsing of online content