@@ -21,13 +21,19 @@ public class Constants {
 		 * Standard Size
 		 */
 		public static final int STAN_W = 600,
-								STAN_H = 450;
+								STAN_H = 650;
 	}
 	
 	/**
 	 * Database Location
 	 */
 	public static final class Database {
+		
+		/**
+		 * Default Question Label
+		 */
+		public static final String LBL = "M.C.",
+								   MK = "[1]";
 		
 		/**
 		 * Online
@@ -38,14 +44,21 @@ public class Constants {
 		@Deprecated
 		private static final URL IBONEXP() {
 			try {
-//				return new URL("https://www.ibdocuments.com/IB%20QUESTIONBANKS/4.%20Fourth%20Edition");
-				// TODO Temp offline server acts as offical server
-				return new File("test/main.html").toURI().toURL();
+				return new URL("https://www.ibdocuments.com/IB%20QUESTIONBANKS/4.%20Fourth%20Edition");
+				// DEBUG ONLINE DB
+				//return new File("test/main.html").toURI().toURL();
 			} catch (MalformedURLException e) {
 				Main.throwError(Main.s.getLocal().get("error.in"), true);
 				return null;
 			}
 		}
+		
+		/**
+		 * Online Latex Equation Formatter
+		 */
+		@Deprecated
+		public static final String FORM = "<script src='https://polyfill.io/v3/polyfill.min.js?features=es6'></script>" + 
+				"<script id='MathJax-script' async src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js'></script>";
 		
 		/**
 		 * Offline
